--- a/index.html
+++ b/index.html
@@ -3,13 +3,19 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Template</title>
-    <link rel="icon" type="image/png" href="https://www.google.com/s2/favicons?domain=css-tricks.com">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css" integrity="sha512-+4zCK9k+qNFUR5X+cKL9EIR+ZOhtIloNl9GIKS57V1MyNsYpYcUrUeQc9vNfzsWfV28IaLL3i96P9sdNyeRssA==" crossorigin="anonymous" />
+    <title>Infinite Scroll</title>
+    <link rel="icon" type="image/png" href="https://www.google.com/s2/favicons?domain=foleon.com">
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+    <!-- Title -->
+    <h1>Unsplash API - infinite scroll</h1>
+    <!-- Loader -->
+    <div class="loader" id="loader">
+        <img src="loader.svg" alt="Loading">
+    </div>
+    <!-- Image Container -->
+    <div class="image-container" id="image-container"></div>
     <!-- Script -->
     <script src="script.js"></script>
 </body>
